[package]
name    = "hh_ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
rusqlite           = { workspace = true }
uuid               = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
chrono             = { workspace = true }
hh_parser_winamax  = { workspace = true }
hand_ledger        = { workspace = true }
cev_realized_core  = { workspace = true }
rs_poker           = { version = "5.0.0", default-features = false }

[dev-dependencies]
tempfile = "3"
